--- a/index.html
+++ b/index.html
@@ -1,71 +1,74 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Pokodim</title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="description" content="WebGL example">
-  <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-store, no-cache" />
-  <meta http-equiv="Expires" content="0" />
 
-  <script src="js/UTILS/gl-matrix-1.2.3.js"></script>
-  <script src="js/UTILS/webgl-utils.js"></script>
-  <script src="js/UTILS/jquery-1.7.1.js"></script>
-  <script src="js/UTILS/bootstrap.js"></script>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-  <script src="js/UTILS/jquery.center.js"></script>
-  <!--<script src="js/UTILS/jquery-ui-1.8.17.custom.min.js"></script>
-  <link href="css/smoothness/jquery-ui-1.8.17.custom.css" rel="stylesheet">-->
-  <script src="js/UTILS/jquery.base64.js"></script>
-  <script src="js/UTILS/webgl-debug.js"></script>
-  <!--<script src="js/UTILS/fpscounter.js"></script>-->
-  <script src="js/UTILS/ace-uncompressed-noconflict.js"></script>
-  <script src="js/UTILS/mode-glsl-noconflict.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Mod : " />
 
-  <link href="css/style.css" rel="stylesheet">
-  <script src="js/UTILS/utils.js"></script>
-  <script src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <script type="text/javascript">
-    window.onbeforeunload = function() 
-     {
-       DeinitWebGL();
-     };
+    <title>Mod</title>
+  </head>
 
-    $(document).ready(function() 
-     {
-       main();
-     });
-  </script>
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Arakelyan/mod">View on GitHub</a>
 
-<div class="canvas-container">
-  <div id="canvas-row">
-    <div id="canvas-wrapper">
-      <canvas id="canvas"></canvas>
+          <h1 id="project_title">Mod</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Arakelyan/mod/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Arakelyan/mod/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
-    <button id="apply-button" class="btn btn-primary btn-large">Apply</button>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="span6">
-      <div>Vertex shader:</div>
-      <div id="vertex-shader-wrapper">
-        <div id="vertex-shader"></div>
-      </div>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
     </div>
-    <div class="span6">
-      <div>Fragment shader:</div>
-      <div id="fragment-shader-wrapper">
-        <div id="fragment-shader"></div>
-      </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Mod maintained by <a href="https://github.com/Arakelyan">Arakelyan</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
     </div>
-  </div>
-</div>
-</body>
+
+    
+
+  </body>
 </html>
